# cli-panda

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  INSTALL.md  INSTALL_FOR_HUMANS.md  README.md  USAGE_EXAMPLES.md  UV_GUIDE.md  cli_panda.py  install-all.sh  install.sh  pyproject.toml  requirements.txt  run.sh  test_all.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
PostDevAi/: .env.example  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
PostDevAi/config/: coordinator_node.toml  developer_node.toml  dragon_node.toml
PostDevAi/docs/: ARCHITECTURE.md  AUTONOMY_RUN.md  HYBRID_MEMORY.md  IMPLEMENTATION_PLAN.md  MLX_INTEGRATION.md  RUST_TUI.md  TUI_INTERFACE.md
PostDevAi/examples/: human_ai_dev_loop.rs
PostDevAi/proto/: postdevai.proto
PostDevAi/scripts/: setup_hybrid_memory.sh  setup_ramdisk.sh  test_mlx_model.py
PostDevAi/src/: lib.rs  proto.rs
PostDevAi/src/core/: mod.rs
PostDevAi/src/core/indexing/: mod.rs
PostDevAi/src/core/memory/: hybrid_memory.rs  mod.rs  persistent.rs  ramlake.rs
PostDevAi/src/core/memory/ramlake/: stores.rs
PostDevAi/src/core/memory/stores/: code_store.rs  history_store.rs  memory_manager.rs  metadata_store.rs  mod.rs  vector_store.rs
PostDevAi/src/core/monitoring/: mod.rs
PostDevAi/src/core/network/: dragon_node_service.rs  mod.rs
PostDevAi/src/mlx/: mod.rs
PostDevAi/src/mlx/embedding/: embedder.rs  mod.rs
PostDevAi/src/mlx/inference/: llm.rs  mod.rs
PostDevAi/src/tui/: app.rs  mod.rs
PostDevAi/src/tui/bridge/: mod.rs  system_bridge.rs
PostDevAi/src/tui/state/: app_state.rs  mod.rs
PostDevAi/src/tui/views/: context.rs  dashboard.rs  help.rs  history.rs  hybrid_memory.rs  mod.rs  models.rs  ramlake.rs
PostDevAi/src/utils/: filesystem.rs  logging.rs
PostDevAi/src/utils/config/: mod.rs
PostDevAi/tests/: main.rs
PostDevAi/tests/tui/: app_state_test.rs  format_helpers.rs  system_bridge_test.rs  view_helper_test.rs
ai-terminal/: .eslintrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  package-lock.json  package.json  test-command-exec.js  test-file-analyzer.js  test-git-assistant.js
ai-terminal/config/: default.json
ai-terminal/config/examples/: README.md  advanced.json  minimal.json  performance.json  rest-mode.json
ai-terminal/src/: cli.ts  configure.ts  index.ts
ai-terminal/src/core/: lm-adapter.ts  lmstudio.ts
ai-terminal/src/features/: autocomplete.ts  file-analyzer.ts  git-assistant.ts  inline-ai.ts
ai-terminal/zsh-components/: aliases.zsh  functions.zsh  init.zsh
cli/: README.md  cli_panda.py
docs/: development-steps.md
lbrxchat/: .env.example  README.md  lmstudio_test.py  pyproject.toml  requirements.txt
lbrxchat/corpus/: data.jsonl
lbrxchat/examples/: mlx_vet_rag_tui.py
lbrxchat/lbrxchat/: __init__.py  __main__.py
lbrxchat/lbrxchat/core/: __init__.py  config.py  models.py  rag.py
lbrxchat/lbrxchat/data/: __init__.py
lbrxchat/lbrxchat/lbrxchat/ui/: styles.css
lbrxchat/lbrxchat/tools/: __init__.py  build_index.py
lbrxchat/lbrxchat/ui/: __init__.py  tui.py
scripts/: install-all.sh  install.sh
