[package]
name = "postdevai"
version = "0.1.0"
edition = "2021"
authors = ["Maciej Gad <maciej@github.com/szowesgad>"]
description = "Autonomous RAM-Lake Memory Server for Developer Symbiosis"
readme = "README.md"
license = "MIT"
repository = "https://github.com/LibraxisAI/PostDevAI"

# Na razie usuwamy workspace do momentu reorganizacji projektu
# Do zrobienia: reorganizacja na workspace gdy będzie potrzebna

[dependencies]
# Core dependencies
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"
futures = "0.3.30"
parking_lot = "0.12.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
thiserror = "1.0.50"
fs_extra = "1.3.0"

# TUI dependencies
ratatui = "0.23.0"
crossterm = "0.27.0"
colored = "2.0.4"

# File system and logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
notify = "6.1.1"
regex = "1.10.2"
walkdir = "2.4.0"

# Vector search and indexing
# Tymczasowo wyłączamy faiss z powodu braku feature "static"
# faiss = { version = "0.11.0", features = ["static"] }

# System information
sys-info = "0.9.1"
num_cpus = "1.16.0"

# Configuration
toml = "0.8.9"

# gRPC and communication
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tonic-build = "0.10.2"

# FFI dependencies (for MLX)
pyo3 = { version = "0.20.2", features = ["auto-initialize", "multiple-pymethods"] }
numpy = "0.20.0"

[dev-dependencies]
criterion = "0.5.1"
mockall = "0.11.4"
assert_fs = "1.0.13"
predicates = "3.0.4"

[dependencies.tempfile]
version = "3.8.1"

[features]
default = ["ramlake", "tui"]
ramlake = []
tui = ["ramlake"]
mlx = []
dragon = ["mlx", "ramlake"]
developer = ["tui", "ramlake"]
coordinator = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true